--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,20 +40,31 @@ localdevdrupal:
     - "9001:9001"
   environment:
 # MySQL variables are not used. This is not working  for me. 
-    - MYSQL_ROOT_PASSWORD=admin123
-    - MYSQL_USER=drupal
-    - MYSQL_PASSWORD=drupalrocks
-    - MYSQL_DATABASE=drupal
+#    - MYSQL_ROOT_PASSWORD=admin123
+#    - MYSQL_USER=drupal
+#    - MYSQL_PASSWORD=drupalrocks
+#    - MYSQL_DATABASE=drupal
 ### Change the subdomain (xxxxx.docker) to give this container its own address.
     - VIRTUAL_HOST=localdevmeos.docker
 #  volumes_from:
 #    - mysqldata
   volumes:
+    # Project root folder mapping
     - "./public_html/:/var/www"
+    # MySQL data folder mapping
     - "./mysqldata/:/data"
-# PHP configuration overrides
+    # PHP configuration overrides
     - "./.drude/etc/php5/php.ini:/etc/php5/fpm/conf.d/z_php.ini"
     - ~/.ssh:/.ssh   # Linux
+    # Host SSH keys mappings.
+    # The startup.sh script in cli container will copy ssh and drush settings to the container.
+    - "~:/.home-linux"  # Linux
+    # Local Development Home overrides - Drush Alias need different settings if run on host or on container.
+    # These will be copied into the drush folder and are not live. 
+    - "./.home-localdev:/.home-localdev"
+  environment:
+    # Optional. Specify a custom SSH RSA key name if necessary. Defaults to 'id_rsa'.
+    - SSH_KEY_NAME=id_rsa    
   links:
     - dockergen
 #    - mysqldata
@@ -66,25 +77,11 @@ localdevdrupal:
 cli:
   hostname: cli
   image: meosch/drupal-cli:php-5.6
-  volumes:
-    # Project root folder mapping
-    - "./public_html/:/var/www"
-#    - ./project
-    # PHP configuration overrides
-    - "./.drude/etc/php5/php-cli.ini:/etc/php5/cli/conf.d/z_php.ini"
-    # Host SSH keys mappings.
-    # The startup.sh script in cli container will copy ssh and drush settings to the container.
-    - "~:/.home-linux"  # Linux
-    # Local Development Home overrides - Drush Alias need different settings if run on host or on container.
-    # These will be copied into the drush folder and are not live. 
-    - "./.home-localdev:/.home-localdev"
-#   - "./milkshake.aliases.drushrc.php:/root/.drush/milkshake.aliases.drushrc.php"
+  volumes_from:
+    - localdevdrupal
   environment:
     # Optional. Specify a custom SSH RSA key name if necessary. Defaults to 'id_rsa'.
     - SSH_KEY_NAME=id_rsa
   links:
-#    - db
     - localdevdrupal
-#    - web2
     - dockergen
-#    - adminer
