Renamed and created link to 'all container' docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,83 +1,1 @@
-### See the two lines below that start with ### for changes needed when creating a new container with this file. - FJH
-globalnginx:
-  hostname: globalnginx
-  image: nginx
-  volumes:
-    - "/tmp/nginx:/etc/nginx/conf.d"
-    - "~/units/globalnginx/certs:/etc/nginx/certs"
-  expose:
-    - "80"
-    - "443"
-  ports:
-    - "80:80"
-    - "443:443"
-
-dockergen:
-  hostname: dockergen
-  image: jwilder/docker-gen
-  volumes_from:
-    - globalnginx
-  volumes:
-    - "/var/run/docker.sock:/tmp/docker.sock"
-    - "~/units/dockergen/:/etc/docker-gen/templates"
-    
-### The next line must be changed if moving this to a new folder. Change the part before _globalnginx_1 -watch to the name of the folder without any underlines and possibly dashes(have not tested dashes).
-  command: -notify-sighup localdevmeos_globalnginx_1 -watch -only-exposed /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
-  links:
-    - globalnginx
-
-localdevdrupal:
-  hostname: localdevdrupal
-  image: meosch/localdevdrupal
-  expose:
-    - "80"
-    - "22"
-    - "3306"
-  ports: 
-#    - "9080:80"
-    - "9022:22"
-    - "9006:3306"
-    - "9001:9001"
-  environment:
-# MySQL variables are not used. This is not working  for me. 
-#    - MYSQL_ROOT_PASSWORD=admin123
-#    - MYSQL_USER=drupal
-#    - MYSQL_PASSWORD=drupalrocks
-#    - MYSQL_DATABASE=drupal
-### Change the subdomain (xxxxx.docker) to give this container its own address.
-    - VIRTUAL_HOST=localdevmeos.docker
-#  volumes_from:
-#    - mysqldata
-  volumes:
-    # Project root folder mapping
-    - "./public_html/:/var/www"
-    # MySQL data folder mapping
-    - "./mysqldata/:/data"
-    # PHP configuration overrides
-    - "./.drude/etc/php5/php.ini:/etc/php5/fpm/conf.d/z_php.ini"
-    # Host SSH keys mappings.
-    # The startup.sh script in cli container will copy ssh and drush settings to the container.
-    - "~:/.home-linux"  # Linux
-    # Local Development Home overrides - Drush Alias need different settings if run on host or on container.
-    # These will be copied into the drush folder and are not live. 
-    - "./.home-localdev:/.home-localdev"
-  links:
-    - dockergen
-#    - mysqldata
-#mysqldata:
-#  hostname: mysqldata
-#  image: meosch/localdevdrupaldata
-
-# CLI node
-# Used for all console commands and tools.
-cli:
-  hostname: cli
-  image: meosch/drupal-cli:php-5.6
-  volumes_from:
-    - localdevdrupal
-  environment:
-    # Optional. Specify a custom SSH RSA key name if necessary. Defaults to 'id_rsa'.
-    - SSH_KEY_NAME=id_rsa
-  links:
-    - localdevdrupal
-    - dockergen
+/home/fhenderson/workarea/docker-compose-localdevmeos/docker-compose-all_containers.yml
