Switched to usig a configuration file for docker-gen so we could also configure a host file for dnsmasq. Also added static ip of 172.17.42.1 to reach the Docker Host computer on with a hostname of docker.

--- a/docker-compose_all_containers.yml
+++ b/docker-compose_all_containers.yml
@@ -20,12 +20,12 @@ dockergen:
   volumes:
     - "/var/run/docker.sock:/tmp/docker.sock"
     - "~/units/dockergen/:/etc/docker-gen/templates"
-    
-### The next line must be changed if moving this to a new folder. Change the part before _globalnginx_1 -watch to the name of the folder without any underlines and possibly dashes(have not tested dashes).
-  command: -notify-sighup localdevmeos_globalnginx_1 -watch -only-exposed /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    - "./docker-gen.conf:/etc/docker-gen/conf.d/docker-gen.conf"
+    - "./docker-dns:/etc/dnsmasq.d/"
+    - "/tmp/dockerhosts:/tmp/dockerhosts"
+  command: -config /etc/docker-gen/conf.d/docker-gen.conf 
   links:
     - globalnginx
-
 localdevdrupal:
   hostname: localdevdrupal
   image: meosch/localdevdrupal
@@ -67,6 +67,8 @@ localdevdrupal:
 #mysqldata:
 #  hostname: mysqldata
 #  image: meosch/localdevdrupaldata
+  extra_hosts:
+    - "docker:172.17.42.1"
 
 # CLI node
 # Used for all console commands and tools.
