Update docker-gen configuration file to include 2 new dnsmasq templates.

--- a/docker-gen.conf
+++ b/docker-gen.conf
@@ -1,7 +1,17 @@
 [[config]]
 template = "/etc/docker-gen/templates/nginx.tmpl"
 dest = "/etc/nginx/conf.d/default.conf"
-notify-sighup = "localdevmeos_globalnginx_1"
 watch = true
 onlyexposed = true
-notifycmd = "/etc/init.d/nginx reload"
+[config.NotifyContainers]
+localdevmeos_globalnginx_1 = 1
+
+[[config]]
+template = "/etc/docker-gen/templates/dnsmasq.tmpl"
+dest = "/tmp/dockerhosts/dockerhosts"
+watch = true
+
+[[config]]
+template = "/etc/docker-gen/templates/dockerhostdns.tmpl"
+dest = "/tmp/dockerhosts/docker"
+watch = true
