Added nginx.conf file so we could change the upload limit.

--- a/docker-compose_all_containers.yml
+++ b/docker-compose_all_containers.yml
@@ -5,6 +5,7 @@ globalnginx:
   volumes:
     - "/tmp/nginx:/etc/nginx/conf.d"
     - "~/units/globalnginx/certs:/etc/nginx/certs"
+    - "./.drude/etc/nginx/nginx.conf:/etc/nginx/nginx.conf"
   expose:
     - "80"
     - "443"
