--- a/docker-compose_all_containers.yml
+++ b/docker-compose_all_containers.yml
@@ -1,89 +1,92 @@
 ### See the two lines below that start with ### for changes needed when creating a new container with this file. - FJH
-globalnginx:
-  hostname: globalnginx
-  image: nginx
-  volumes:
-    - "/tmp/nginx:/etc/nginx/conf.d"
-    - "~/units/globalnginx/certs:/etc/nginx/certs"
-    - "./.drude/etc/nginx/nginx.conf:/etc/nginx/nginx.conf"
-  expose:
-    - "80"
-    - "443"
-  ports:
-    - "80:80"
-    - "443:443"
+version: "2"
 
-dockergen:
-  hostname: dockergen
-  image: jwilder/docker-gen
-  volumes_from:
-    - globalnginx
-  volumes:
-    - "/var/run/docker.sock:/tmp/docker.sock"
-    - "~/units/dockergen/:/etc/docker-gen/templates"
-    - "./docker-gen.conf:/etc/docker-gen/conf.d/docker-gen.conf"
-    - "/var/tmp/dockerhosts:/var/tmp/dockerhosts"
-  command: -config /etc/docker-gen/conf.d/docker-gen.conf 
-  links:
-    - globalnginx
-localdevdrupal:
-  hostname: localdevdrupal
-  image: meosch/localdevdrupal
-  expose:
-    - "80"
-    - "22"
-    - "3306"
-  ports: 
-#    - "9080:80"
-    - "9022:22"
-    - "9006:3306"
-    - "9001:9001"
-  environment:
-# MySQL variables are not used. This is not working  for me. 
-#    - MYSQL_ROOT_PASSWORD=admin123
-#    - MYSQL_USER=drupal
-#    - MYSQL_PASSWORD=drupalrocks
-#    - MYSQL_DATABASE=drupal
-### Change the subdomain (xxxxx.docker) to give this container its own address.
-    - VIRTUAL_HOST=localdevmeos.docker
-### Set the environment to load the settings.php file for. dev or our docker containers
-    - MEOS_SITE_ENVIRONMENT=dev
-#  volumes_from:
-#    - mysqldata
-  volumes:
-    # Project root folder mapping
-    - "./public_html/:/var/www"
-    # MySQL data folder mapping
-    - "./mysqldata/:/data"
-    # Drupal private files folder. Set this to /var/tmp/private in Drupal.
-    - "./private/:/var/tmp/private"
-    # PHP configuration overrides
-    - "./.drude/etc/php5/php.ini:/etc/php5/fpm/conf.d/z_php.ini"
-    # Host SSH keys mappings.
-    # The startup.sh script in cli container will copy ssh and drush settings to the container.
-    - "~:/.home-linux"  # Linux
-    # Local Development Home overrides - Drush Alias need different settings if run on host or on container.
-    # These will be copied into the drush folder and are not live. 
-    - "./.home-localdev:/.home-localdev"
-  links:
-    - dockergen
-#    - mysqldata
-#mysqldata:
-#  hostname: mysqldata
-#  image: meosch/localdevdrupaldata
-  extra_hosts:
-    - "docker:172.17.42.1"
+services:
+  globalnginx:
+    hostname: globalnginx
+    image: nginx
+    volumes:
+      - "/tmp/nginx:/etc/nginx/conf.d"
+      - "~/units/globalnginx/certs:/etc/nginx/certs"
+      - "./.drude/etc/nginx/nginx.conf:/etc/nginx/nginx.conf"
+    expose:
+      - "80"
+      - "443"
+    ports:
+      - "80:80"
+      - "443:443"
 
-# CLI node
-# Used for all console commands and tools.
-cli:
-  hostname: cli
-  image: meosch/drupal-cli:php-5.6
-  volumes_from:
-    - localdevdrupal
-  environment:
-    # Optional. Specify a custom SSH RSA key name if necessary. Defaults to 'id_rsa'.
-    - SSH_KEY_NAME=id_rsa
-  links:
-    - localdevdrupal
-    - dockergen
+  dockergen:
+    hostname: dockergen
+    image: jwilder/docker-gen
+    volumes_from:
+      - globalnginx
+    volumes:
+      - "/var/run/docker.sock:/tmp/docker.sock"
+      - "~/units/dockergen/:/etc/docker-gen/templates"
+      - "./docker-gen.conf:/etc/docker-gen/conf.d/docker-gen.conf"
+      - "/var/tmp/dockerhosts:/var/tmp/dockerhosts"
+    command: -config /etc/docker-gen/conf.d/docker-gen.conf
+    depends_on:
+      - globalnginx
+  localdevdrupal:
+    hostname: localdevdrupal
+    image: meosch/localdevdrupal
+    expose:
+      - "80"
+      - "22"
+      - "3306"
+    ports:
+  #    - "9080:80"
+      - "9022:22"
+      - "9006:3306"
+      - "9001:9001"
+    environment:
+  # MySQL variables are not used. This is not working  for me.
+  #    - MYSQL_ROOT_PASSWORD=admin123
+  #    - MYSQL_USER=drupal
+  #    - MYSQL_PASSWORD=drupalrocks
+  #    - MYSQL_DATABASE=drupal
+  ### Change the subdomain (xxxxx.docker) to give this container its own address.
+      - VIRTUAL_HOST=localdevmeos.docker
+  ### Set the environment to load the settings.php file for. dev or our docker containers
+      - MEOS_SITE_ENVIRONMENT=dev
+  #  volumes_from:
+  #    - container:mysqldata
+    volumes:
+      # Project root folder mapping
+      - "./public_html/:/var/www"
+      # MySQL data folder mapping
+      - "./mysqldata/:/data"
+      # Drupal private files folder. Set this to /var/tmp/private in Drupal.
+      - "./private/:/var/tmp/private"
+      # PHP configuration overrides
+      - "./.drude/etc/php5/php.ini:/etc/php5/fpm/conf.d/z_php.ini"
+      # Host SSH keys mappings.
+      # The startup.sh script in cli container will copy ssh and drush settings to the container.
+      - "~:/.home-linux"  # Linux
+      # Local Development Home overrides - Drush Alias need different settings if run on host or on container.
+      # These will be copied into the drush folder and are not live.
+      - "./.home-localdev:/.home-localdev"
+    depends_on:
+      - dockergen
+  #    - mysqldata
+  #mysqldata:
+  #  hostname: mysqldata
+  #  image: meosch/localdevdrupaldata
+    extra_hosts:
+      - "docker:172.17.42.1"
+
+  # CLI node
+  # Used for all console commands and tools.
+  cli:
+    hostname: cli
+    image: meosch/drupal-cli:php-5.6
+    volumes_from:
+      - localdevdrupal
+    environment:
+      # Optional. Specify a custom SSH RSA key name if necessary. Defaults to 'id_rsa'.
+      - SSH_KEY_NAME=id_rsa
+    depends_on:
+      - localdevdrupal
+      - dockergen
