Changed project root folder mapping from public_html to project.

--- a/docker-compose_add_on_site.yml
+++ b/docker-compose_add_on_site.yml
@@ -32,7 +32,7 @@ services:
   #    - container:mysqldata
     volumes:
       # Project root folder mapping
-      - "./public_html/:/var/www"
+      - "./project/:/var/www"
       # MySQL data folder mapping
       - "./mysqldata/:/data"
       # Drupal private files folder. Set this to /var/tmp/private in Drupal.
