Set networking mode to bridge so that our Nginx proxy works for add-on containers too.

--- a/docker-compose_add_on_site.yml
+++ b/docker-compose_add_on_site.yml
@@ -5,6 +5,7 @@ services:
   localdevdrupal:
     hostname: localdevdrupal
     image: meosch/localdevdrupal
+    network_mode: bridge
     expose:
       - "80"
       - "22"
